Re-name the tab a little bit.

--- a/USCISTracker/USCISTracker/Views/Shell.xaml
+++ b/USCISTracker/USCISTracker/Views/Shell.xaml
@@ -22,7 +22,7 @@
                     <SymbolIcon Width="48" Height="48"
                                 Symbol="Home" />
                     <TextBlock Margin="12,0,0,0" VerticalAlignment="Center"
-                               Text="Home" />
+                               Text="My Cases" />
                 </StackPanel>
             </Controls:HamburgerButtonInfo>
         </Controls:HamburgerMenu.PrimaryButtons>
