--- a/USCISTracker/USCISTracker/Views/CaseCreatorContentDialog.xaml
+++ b/USCISTracker/USCISTracker/Views/CaseCreatorContentDialog.xaml
@@ -12,6 +12,27 @@
     PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
     SecondaryButtonClick="ContentDialog_SecondaryButtonClick">
 
-    <Grid>
+    <Grid x:Name="MainGrid">
+        <RelativePanel HorizontalAlignment="Stretch">
+            
+            <!--Receipt Number-->
+            <TextBlock x:Name="ReceiptNunberLabelTextBlock" Text="Receipt #:"></TextBlock>
+            
+            <TextBox x:Name="ReceiptNumberTextBox" MaxLength="13"
+                     RelativePanel.Below="ReceiptNunberLabelTextBlock" 
+                     RelativePanel.AlignLeftWithPanel="True" 
+                     RelativePanel.AlignRightWithPanel="True" Margin="0,5,0,0" TextChanging="ReceiptNumberTextBox_TextChanging" TextChanged="ReceiptNumberTextBox_TextChanged"                    
+                     ></TextBox>
+
+            <!--Case name-->
+            <TextBlock x:Name="CaseNamelabelTextBlock" Text="Name (Optional):" RelativePanel.Below="ReceiptNumberTextBox" Margin="0,10,0,0"></TextBlock>
+
+            <TextBox x:Name="CaseNameTextBox" RelativePanel.Below="CaseNamelabelTextBlock"
+                     RelativePanel.AlignLeftWithPanel ="True"
+                     RelativePanel.AlignRightWithPanel="True"
+                     Margin="0,5,0,0"></TextBox>
+            
+            
+        </RelativePanel>
     </Grid>
 </ContentDialog>
