--- a/USCISTracker/USCISTracker/Views/MainPage.xaml
+++ b/USCISTracker/USCISTracker/Views/MainPage.xaml
@@ -286,7 +286,7 @@
                     BorderThickness="0,1,0,0"
                     VerticalAlignment="Bottom"
                     Grid.ColumnSpan="2">
-            <AppBarButton x:Name="AddNewCaseAppBarButton" Icon="Add" Click="{x:Bind ViewModel.AddNewCaseAsync}"></AppBarButton>
+            <AppBarButton x:Name="AddNewCaseAppBarButton" Icon="Add" Click="AddNewCaseAppBarButton_Click"></AppBarButton>
             <AppBarButton x:Name="CheckCaseStatusAppBarButton" Icon="Sync"></AppBarButton>
         </CommandBar>
     </Grid>
